# cleanlab-forge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: 01_quickstart_cleanlab.ipynb  02_model_sweep.ipynb  03_pydantic_ai_report.ipynb  04_regression_outliers.ipynb  05_multiclass_classification_covtype.ipynb  06_multilabel_classification_emotions.ipynb  07_token_classification_ud_pos.ipynb  08_regression_cleanlearning_bike_sharing.ipynb  09_multiannotator_active_learning_movielens_100k.ipynb  10_outlier_detection_datalab_california_housing.ipynb  11_vision_detection_segmentation_pennfudan.ipynb
src/cleanlab_demo/: cli.py  config.py  metrics.py  settings.py
src/cleanlab_demo/ai/: report.py
src/cleanlab_demo/data/: __init__.py  hub.py  schemas.py
src/cleanlab_demo/data/providers/: __init__.py  multiannotator.py  multiclass.py  multilabel.py  outlier.py  regression.py  token.py  vision.py
src/cleanlab_demo/experiments/: __init__.py  runner.py  sweep.py
src/cleanlab_demo/features/: __init__.py  preprocess.py
src/cleanlab_demo/models/: __init__.py  factory.py
src/cleanlab_demo/tasks/: __init__.py  base.py
src/cleanlab_demo/tasks/multiannotator/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/multiclass/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/multilabel/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/outlier/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/regression/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/token/: __init__.py  cv.py  featurization.py  metrics.py  model.py  noise.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/vision/: __init__.py  provider.py  schemas.py  task.py  utils.py
src/cleanlab_demo/ui/: streamlit_app.py
src/cleanlab_demo/utils/: __init__.py  download.py
tests/: conftest.py  test_config_defaults.py  test_data_hub.py  test_download_validation.py  test_improvements.py  test_metrics.py  test_model_factory.py  test_preprocessing.py  test_runner_smoke.py
